--- a/style.css
+++ b/style.css
@@ -1,13 +1,178 @@
-.vh {
-    background-color: rgb(238, 255, 0);
-    height: 300vh;
-    width: 50vw;
-    display: flex;
-    align-items: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
-.center_block {
-    background-color: rgb(23, 170, 189);
-    width: 100%;
+.header {
+    width: 100vw;
     height: 100vh;
+    background-image: url(img/bgc.jpg);
+    background-size: cover;
+    background-position: center center;
+    padding-top: 56px;
+    position: relative;
+}
+
+.container {
+    width: 90%;
+    color: #ffffff;
+    margin: auto;
+}
+
+.title {
+    text-align: center;
+    width: 100%;
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+.title h2 {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.title h1 {
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+@keyframes slidein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.button-holder {
+    widows: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.button {
+    width: 100px;
+    height: 100px;
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    font-weight: 700;
+    background-color: #ffffff;
+    color: #66abee;
+    font-size: 17px;
+    margin-top: 200px;
+    opacity: 0.6;
+    transition: 0.3s;
+}
+
+.button:hover {
+    opacity: 0.9;
+}
+
+:root {
+    --main-color: #004758;
+    --point-color: rgb(255, 255, 255);
+    --size: 4px;
+}
+
+.loader {
+    width: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    bottom: 0;
+    padding-bottom: 5vh;
+    animation-duration: 3s;
+    animation-name: loading;
+    opacity: 0;
+}
+
+.loader__element {
+    border-radius: 100%;
+    border: var(--size) solid var(--point-color);
+    margin: calc(var(--size) * 2);
+}
+
+.loader__element:nth-child(1) {
+    animation: preloader 0.6s ease-in-out alternate infinite;
+}
+.loader__element:nth-child(2) {
+    animation: preloader 0.6s ease-in-out alternate 0.2s infinite;
+}
+
+.loader__element:nth-child(3) {
+    animation: preloader 0.6s ease-in-out alternate 0.4s infinite;
+}
+
+@keyframes preloader {
+    100% {
+        transform: scale(2);
+    }
+}
+
+@keyframes loading {
+    /* 0% {
+        opacity: 0.9;
+    }
+    20% {
+        opacity: 0.9;
+    }
+    50% {
+        opacity: 0.9;
+    }
+    60% {
+        opacity: 0.9;
+    }
+    80% {
+        opacity: 9;
+    }
+    90% {
+        opacity: 9;
+    }
+    100% {
+        opacity: 9;
+    }
+    0% {
+        opacity: 0;
+    } */
+    /* from {
+        z-index: 1;
+    }
+    to {
+        z-index: -1;
+    } */
+}
+
+.content {
+    height: 100vh;
+    display: flex;
+}
+
+.asan {
+    position: relative;
+    background-color: rgba(158, 158, 158, 0.463);
+    width: 100%;
+    height: 14vh;
+    z-index: 2;
+    margin: 10px 0;
+    border-radius: 15px;
+}
+
+.asan-title {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 8px;
+    background-color: rgba(41, 41, 22, 0.548);
+    border-radius: 15px 0 15px 0;
+    font-size: 18px;
 }
