--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
+}
+
+body {
+    background: conic-gradient(at 0% 0%, snow, white);
 }
 
 .header {
@@ -65,8 +69,8 @@
     outline: none;
     border-radius: 50%;
     font-weight: 700;
-    background-color: #ffffff;
-    color: #66abee;
+    background: conic-gradient(from 90deg at bottom right, cyan, rebeccapurple);
+    color: #ffffff;
     font-size: 17px;
     margin-top: 200px;
     opacity: 0.6;
@@ -74,7 +78,7 @@
 }
 
 .button:hover {
-    opacity: 0.9;
+    opacity: 1;
 }
 
 :root {
@@ -91,9 +95,6 @@
     align-content: center;
     justify-content: center;
     bottom: 0;
-    padding-bottom: 5vh;
-    animation-duration: 3s;
-    animation-name: loading;
     opacity: 0;
 }
 
@@ -120,60 +121,60 @@
     }
 }
 
-@keyframes loading {
-    /* 0% {
-        opacity: 0.9;
-    }
-    20% {
-        opacity: 0.9;
-    }
-    50% {
-        opacity: 0.9;
-    }
-    60% {
-        opacity: 0.9;
-    }
-    80% {
-        opacity: 9;
-    }
-    90% {
-        opacity: 9;
-    }
-    100% {
-        opacity: 9;
-    }
-    0% {
-        opacity: 0;
-    } */
-    /* from {
-        z-index: 1;
-    }
-    to {
-        z-index: -1;
-    } */
-}
-
 .content {
     height: 100vh;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 20px;
 }
 
 .asan {
     position: relative;
-    background-color: rgba(158, 158, 158, 0.463);
-    width: 100%;
-    height: 14vh;
-    z-index: 2;
-    margin: 10px 0;
+    /* background-color: rgba(158, 158, 158, 0.463); */
+    width: 48.5%;
+    height: 27vh;
     border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: #fff;
 }
 
 .asan-title {
     position: absolute;
-    right: 0;
-    bottom: 0;
-    padding: 8px;
-    background-color: rgba(41, 41, 22, 0.548);
+    background: conic-gradient(from 90deg at bottom right, cyan, rebeccapurple);
+    padding: 0 10px 0 10px;
     border-radius: 15px 0 15px 0;
     font-size: 18px;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+}
+.asan-title h3 {
+    font-weight: 600;
+}
+
+.get-up-holder {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.get-up {
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    background: conic-gradient(from 90deg at bottom right, cyan, rebeccapurple);
+    color: #ffffff;
+    font-size: 28px;
+    right: 0;
+    margin-left: 20px;
+}
+
+.get-up a {
+    text-decoration: none;
+    color: #fff;
 }
